[project]
name = "pyastro"
version = "0.1.0"
description = "Minimal Asteroids clone built with pygame"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
pyastro = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
